Seams in Baked Tangent Space Normals #32404

Closed
opened 2012-08-24 20:38:13 +02:00 by Zach Wilson · 8 comments

%%%Baking Tangent Space Normals produce maps with seams only apparent in GLSL within Blender and Unity.

Seams do not appear when setting bake and texture's image sampling settings to World Space or Object Space.

To Reproduce:

  1. Open Attached WithMulti.blend file
  2. Select "HiRez" model in Outliner
  3. Select "LoRez" model in Outliner
  4. Under Render select "Bake" to bake normal map

%%%

%%%Baking Tangent Space Normals produce maps with seams only apparent in GLSL within Blender and Unity. Seams do not appear when setting bake and texture's image sampling settings to World Space or Object Space. To Reproduce: 1. Open Attached WithMulti.blend file 2. Select "HiRez" model in Outliner 3. Select "LoRez" model in Outliner 4. Under Render select "Bake" to bake normal map 5. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%The seam is happening because you are using the float buffer. I don't think that the floating point images are correctly supported for tangent space normal maps as the values created are too light and do not produce a valid value that is correct in tangent space, which is causing the seam.
If you want higher precision for tangent space normal maps, I would recommend using tiff and setting it to 16bit, which is plenty for normal maps.
Please see the attached file to see what I mean. :)%%%

%%%The seam is happening because you are using the float buffer. I don't think that the floating point images are correctly supported for tangent space normal maps as the values created are too light and do not produce a valid value that is correct in tangent space, which is causing the seam. If you want higher precision for tangent space normal maps, I would recommend using tiff and setting it to 16bit, which is plenty for normal maps. Please see the attached file to see what I mean. :)%%%

%%%It's just the color management inside the image editor which literary screws up the colors for normal maps. The values itself are correct. But if you store such an image with color management and then use it as a normal map it will have false normals because the color management now screws up the image.%%%

%%%It's just the color management inside the image editor which literary screws up the colors for normal maps. The values itself are correct. But if you store such an image with color management and then use it as a normal map it will have false normals because the color management now screws up the image.%%%

%%%Fix in svn, thanks for the report. Color management is indeed problematic in the image editor, that will get improved once we have OpenColorIO, though this particular case was more of a bug in the current code not following design.%%%

%%%Fix in svn, thanks for the report. Color management is indeed problematic in the image editor, that will get improved once we have OpenColorIO, though this particular case was more of a bug in the current code not following design.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Awesome guys. This helps us alot. Both the work around and the eventual fix.%%%

%%%Awesome guys. This helps us alot. Both the work around and the eventual fix.%%%

%%%I'm afraid this bug is not fixed. Tangent normalmaps still baking with seams.

To reproduce:

  1. open bake_bug.blend
  2. Press "Bake"
    %%%
%%%I'm afraid this bug is not fixed. Tangent normalmaps still baking with seams. To reproduce: 1. open bake_bug.blend 2. Press "Bake" %%%

%%%Ups. Please unsee my comment.
Mistake is mine, sorry%%%

%%%Ups. Please unsee my comment. Mistake is mine, sorry%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32404
No description provided.