Fix #32404: GLSL normal maps using float images were incorrectly getting color managed.