source/blender/nodes/shader/nodes/node_shader_tex_image.c
@@ -58,6 +58,8 @@ static int node_shader_gpu_tex_image(GPUMaterial *mat, bNode *node, GPUNodeStack
 {
 	Image *ima= (Image*)node->id;
 	ImageUser *iuser= NULL;
+	NodeTexImage *tex = node->storage;
+	int ncd = tex->color_space == SHD_COLORSPACE_NONE;
 
 	if (!ima)
 		return GPU_stack_link(mat, "node_tex_image_empty", in, out);
@@ -67,7 +69,7 @@ static int node_shader_gpu_tex_image(GPUMaterial *mat, bNode *node, GPUNodeStack
 
 	node_shader_gpu_tex_mapping(mat, node, in, out);
 
-	return GPU_stack_link(mat, "node_tex_image", in, out, GPU_image(ima, iuser));
+	return GPU_stack_link(mat, "node_tex_image", in, out, GPU_image(ima, iuser, ncd));
 }
 
 /* node type definition */
