source/blender/nodes/shader/nodes/node_shader_texture.c
@@ -122,7 +122,7 @@ static int gpu_shader_texture(GPUMaterial *mat, bNode *node, GPUNodeStack *in, G
 	Tex *tex = (Tex*)node->id;
 
 	if (tex && tex->type == TEX_IMAGE && tex->ima) {
-		GPUNodeLink *texlink = GPU_image(tex->ima, NULL);
+		GPUNodeLink *texlink = GPU_image(tex->ima, NULL, FALSE);
 		return GPU_stack_link(mat, "texture_image", in, out, texlink);
 	}
 	else
